legacy version support 60% done